# Django-Ninja-Tutorial

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  conftest.py  manage.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  users.json
NinjaForum/: api.py  asgi.py  pagination.py  settings.py  urls.py  wsgi.py
fixtures/: posts.json
post/: api.py  models.py  schemas.py
post/migrations/: 0001_initial.py  0002_initial.py
user/: api.py  models.py  schemas.py  tests.py
user/migrations/: 0001_initial.py  0002_user_avatar.py
