[tool.poetry]
name = "django-ninja-tutorial"
version = "0.1.0"
description = "A Django project to demonstrate how to use Django Ninja"
authors = ["Kyo Huang <odinxp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2"
django-stubs = "^5.0.4"

[tool.poetry.group.dev.dependencies]
ruff = "0.6.3"
pre-commit = "^3.8.0"
mypy = "^1.11.2"
django-stubs = "^5.0.4"
pytest = "^8.3.2"
pytest-django = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
