[tool.poetry]
authors = ["Kyo Huang <odinxp@gmail.com>"]
description = "A Django project to demonstrate how to use Django Ninja"
name = "django-ninja-tutorial"
version = "0.1.0"

[tool.poetry.dependencies]
django = "^4.2"
django-ninja = "^1.3.0"
pillow = "^10.4.0"
python = "^3.12"

[tool.poetry.group.dev.dependencies]
django-stubs = "^5.0.4"
mypy = "^1.11.2"
pre-commit = "^3.8.0"
pytest = "^8.3.2"
pytest-django = "^4.9.0"
ruff = "0.6.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[project]
requires-python = ">=3.12" #影響pyupgrade檢查與自動修正的版本

[tool.ruff] # https://docs.astral.sh/ruff/settings/#top-level
exclude = ["**/migrations/", "**/manage.py"] # 排除 migrations 目錄和 manage.py 檔案
line-length = 100

[tool.ruff.lint] # https://docs.astral.sh/ruff/settings/#lint
ignore = [
  "E402", # module level import not at top of file
]
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "I", # isort
  "UP", # pyupgrade
]

[tool.ruff.format] # https://docs.astral.sh/ruff/settings/#format
quote-style = "single" # 引號風格，雙引號是預設值

[tool.mypy]
allow_redefinition = true
check_untyped_defs = true
disable_error_code = ["empty-body"]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude = "^(migrations|.*manage\\.py)$"
force_union_syntax = true
force_uppercase_builtins = true
ignore_missing_imports = true
incremental = true
plugins = ["mypy_django_plugin.main"]
show_traceback = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.django-stubs]
django_settings_module = "NinjaForum.settings"

[tool.pytest.ini_options]
addopts = [
  "--ds=NinjaForum.settings",
]
filterwarnings = [
  "ignore::Warning",
]
python_files = [
  "tests.py",
  "test_*.py",
]
